# pyedautils

./: .gitignore  LICENSE.txt  README.md  app_mollier.py  app_mollier_d3.py  app_mollier_echarts.py  comfort_preview.html  decomposition_preview.html  density_preview.html  energy_signature_preview.html  pyproject.toml  requirements.txt  seasonal_preview.html  setup.py  sumfreq_preview.html
.github/workflows/: deploy-docs.yml  python-unittest.yml  release_pypi.yml
docs/: _config.yml  _toc.yml  installation.md  intro.md
docs/api/: agroweather.md  data_io.md  data_prep.md  data_quality.md  geopy.md  index.md  meteo_swiss.md  plots.md  season.md  weather.md
docs/examples/: agroweather.md  comfort.ipynb  daily_profiles.ipynb  data_io.md  data_prep.md  data_quality.ipynb  decomposition.ipynb  density_seasons.ipynb  energy_signature.ipynb  geopy.md  heatmap_calendar.ipynb  heatmap_median_weeks.ipynb  index.md  meteo_swiss.md  mollier_hx.ipynb  plots.md  season.md  seasonal.ipynb  sum_frequency.ipynb  weather.md
docs/images/: plot_daily_profiles_overview.html
pyedautils/: __init__.py  _mollier.py  _plot_utils.py  agroweather.py  data_io.py  data_quality.py  energy_signature.py  geopy.py  meteo_swiss.py  plots.py  season.py
pyedautils/data/: bldg_engy_sig_pes.csv  bldg_engy_sig_simple.csv  decomposition_long.csv  decomposition_short.csv  ele_meter.csv  flat_temp.csv  flat_temp_hum.csv  mollier_sample.csv  outside_temp.csv  seasonal_monthly.csv
pyedautils/data/d3_mollier/: CoordinateGenerator.js
pyedautils/data_prep/: __init__.py
pyedautils/plots/: __init__.py  _constants.py  comfort.py  energy.py  heatmaps.py  profiles.py  seasonal.py  stat.py
pyedautils/weather/: __init__.py  agroweather.py
tests/: test_agroweather.py  test_data_io.py  test_data_quality.py  test_energy_signature.py  test_geopy.py  test_geopyhelpers.py  test_meteo_swiss.py  test_mollier.py  test_plots.py  test_season.py
